[gd_scene load_steps=32 format=3 uid="uid://cwc2nel1xt6xx"]

[ext_resource type="Script" path="res://worldObjects/scripts/worldManager.gd" id="1_fl71r"]
[ext_resource type="PackedScene" uid="uid://ddeqbtwpcjgkc" path="res://worlds/levelUI.tscn" id="2_50e4x"]
[ext_resource type="PackedScene" uid="uid://kw4j0yjkt6bb" path="res://worldObjects/blockLong.tscn" id="2_78xmt"]
[ext_resource type="PackedScene" uid="uid://bsbq6v7ueradk" path="res://worldObjects/killFloor.tscn" id="3_6me16"]
[ext_resource type="PackedScene" uid="uid://bvhi8ylhyxb4a" path="res://worldObjects/actionIndicator.tscn" id="3_o6usx"]
[ext_resource type="PackedScene" uid="uid://dcehy21ekao56" path="res://levelEditor/goal_block.tscn" id="3_oih58"]
[ext_resource type="Script" path="res://worldObjects/scripts/camera.gd" id="4_nttx1"]
[ext_resource type="PackedScene" uid="uid://di7r6ds1tcpfj" path="res://worldObjects/checkpoint.tscn" id="4_ph2wq"]
[ext_resource type="PackedScene" uid="uid://bwbudlc6eqg88" path="res://player/player1.tscn" id="5_dfiyk"]
[ext_resource type="PackedScene" uid="uid://lc6sx7h55k1p" path="res://worldObjects/enemy/enemy.tscn" id="7_po4yx"]
[ext_resource type="PackedScene" uid="uid://csh1k6wpxxqre" path="res://worldObjects/wall/breakableWallQ.tscn" id="10_twea0"]
[ext_resource type="PackedScene" uid="uid://crscxlpwqp343" path="res://worldObjects/slideWall.tscn" id="11_hh0vp"]
[ext_resource type="PackedScene" uid="uid://u4osldlbr3sl" path="res://worldObjects/zipline/ziplineManager.tscn" id="11_mqtla"]
[ext_resource type="FontFile" uid="uid://ciye4cqh48iks" path="res://fonts/ethnocentric rg.otf" id="12_jtaw1"]
[ext_resource type="Script" path="res://worldObjects/scripts/action_indicator_manager.gd" id="13_euntf"]
[ext_resource type="PackedScene" uid="uid://b8v38gkay1bem" path="res://worldObjects/jumpBoost.tscn" id="13_iujdl"]
[ext_resource type="PackedScene" uid="uid://jbnrqqpvtubf" path="res://worldObjects/killWall.tscn" id="13_sbyxw"]
[ext_resource type="PackedScene" uid="uid://dchr6kx2lhuq5" path="res://worldObjects/zipline/ziplineMiddle.tscn" id="14_jwoui"]
[ext_resource type="Script" path="res://worldObjects/scripts/checkpoint.gd" id="14_rbu47"]
[ext_resource type="PackedScene" uid="uid://djj8kajulhmho" path="res://worldObjects/coin.tscn" id="15_4qhng"]
[ext_resource type="Texture2D" uid="uid://c3kkhcu3x428f" path="res://player/actionLine.png" id="15_gryhe"]
[ext_resource type="Script" path="res://worlds/score.gd" id="15_mx364"]
[ext_resource type="PackedScene" uid="uid://cvljdgtwhans5" path="res://worldObjects/scorePopup.tscn" id="16_kbija"]
[ext_resource type="PackedScene" uid="uid://bqwryhi02l72w" path="res://ui/healthManager.tscn" id="17_bwxam"]
[ext_resource type="AudioStream" uid="uid://cwunsxkx78vcj" path="res://audioTracks/Tutorial_New_155bpm.mp3" id="18_44qgl"]
[ext_resource type="PackedScene" uid="uid://cgjl1xcxhhjxu" path="res://worldObjects/powerup.tscn" id="19_5vjyv"]
[ext_resource type="PackedScene" uid="uid://25td4r2m7r1e" path="res://ui/scoreBar.tscn" id="20_iu2pl"]
[ext_resource type="PackedScene" uid="uid://cdb5n44jar0hf" path="res://ui/progressBar.tscn" id="22_7f6ic"]
[ext_resource type="PackedScene" uid="uid://cng0uyugakene" path="res://worldObjects/glitchLines.tscn" id="23_jq54w"]
[ext_resource type="PackedScene" uid="uid://bo0d4wxsgmli1" path="res://ui/powerupSlot.tscn" id="25_wa2am"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rypfk"]
size = Vector2(12, 1086)

[node name="level" type="Node2D"]
script = ExtResource("1_fl71r")
levelFile = "verttest"
platformBlockInstance = ExtResource("2_78xmt")
goalBlockInstance = ExtResource("3_oih58")
killFloorInstance = ExtResource("3_6me16")
actionIndicatorInstance = ExtResource("3_o6usx")
checkpointInstance = ExtResource("4_ph2wq")
player1Instance = ExtResource("5_dfiyk")
enemyInstance = ExtResource("7_po4yx")
breakableWallInstance = ExtResource("10_twea0")
ziplineInstance = ExtResource("11_mqtla")
slideWallInstance = ExtResource("11_hh0vp")
powerupInstance = ExtResource("19_5vjyv")
jumpInstance = ExtResource("13_iujdl")
ziplineMiddle = ExtResource("14_jwoui")
coinInstance = ExtResource("15_4qhng")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 1847.0
offset_top = 3.0
offset_right = 1920.0
offset_bottom = 67.0
theme_override_fonts/normal_font = ExtResource("12_jtaw1")

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 743.0
offset_top = 132.0
offset_right = 1193.0
offset_bottom = 316.0
pivot_offset = Vector2(225, 92)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("12_jtaw1")
theme_override_font_sizes/font_size = 96
text = "00000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("15_mx364")

[node name="Background" type="Node2D" parent="."]
position = Vector2(250, 645)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(250, 645)
ignore_rotation = false
zoom = Vector2(2, 2)
script = ExtResource("4_nttx1")

[node name="PowerupSlot" parent="Camera2D" instance=ExtResource("25_wa2am")]

[node name="glitchLines" parent="Camera2D" instance=ExtResource("23_jq54w")]
position = Vector2(0, 120)

[node name="Music" type="AudioStreamPlayer2D" parent="Camera2D" groups=["musicSounds"]]
position = Vector2(-960, -540)
stream = ExtResource("18_44qgl")
max_distance = 10000.0

[node name="KillWall" parent="Camera2D" instance=ExtResource("13_sbyxw")]
position = Vector2(-720, -502)
scale = Vector2(1.5, 1.5)

[node name="ActionLine" type="Sprite2D" parent="Camera2D"]
position = Vector2(-250, 0)
texture = ExtResource("15_gryhe")

[node name="ScorePopup1" parent="Camera2D" instance=ExtResource("16_kbija")]
position = Vector2(-250, -158)

[node name="RunBounds" type="Area2D" parent="Camera2D"]
position = Vector2(-250, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/RunBounds"]
position = Vector2(4, 1)
shape = SubResource("RectangleShape2D_rypfk")

[node name="ColorRect" type="ColorRect" parent="Camera2D/RunBounds"]
visible = false
offset_left = -22.0
offset_top = -448.0
offset_right = 18.0
offset_bottom = 374.0

[node name="objectList" type="Node2D" parent="."]

[node name="platformBlocks" type="Node2D" parent="objectList"]

[node name="goalBlocks" type="Node2D" parent="objectList"]

[node name="killFloors" type="Node2D" parent="objectList"]

[node name="enemies" type="Node2D" parent="objectList"]

[node name="actionIndicators" type="Node2D" parent="objectList"]
script = ExtResource("13_euntf")

[node name="playerCheckpoints" type="Node2D" parent="objectList"]
script = ExtResource("14_rbu47")

[node name="players" type="Node2D" parent="objectList"]

[node name="ziplines" type="Node2D" parent="objectList"]

[node name="breakableWalls" type="Node2D" parent="objectList"]

[node name="slideWalls" type="Node2D" parent="objectList"]

[node name="powerups" type="Node2D" parent="objectList"]

[node name="jumpBoosts" type="Node2D" parent="objectList"]

[node name="coins" type="Node2D" parent="objectList"]

[node name="HealthManager" parent="." instance=ExtResource("17_bwxam")]

[node name="ScoreBar" parent="." instance=ExtResource("20_iu2pl")]

[node name="ProgressBar" parent="." instance=ExtResource("22_7f6ic")]
visible = false

[node name="LevelUI" parent="." instance=ExtResource("2_50e4x")]

[connection signal="body_entered" from="Camera2D/RunBounds" to="." method="_onRunBoundsBodyEntered"]
[connection signal="body_exited" from="Camera2D/RunBounds" to="." method="_onRunBoundsBodyExited"]
